--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: bootpay_api
 description: Bootpay Flutter plugin. This plugin supports both Android and iOS.
-version: 1.0.1
-homepage: https://www.bootpay.co.kr/
+version: 1.0.5
+homepage: https://www.bootpay.co.kr
+repository: https://github.com/bootpay/flutter
+documentation: https://docs.bootpay.co.kr
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
